--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,103 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main{
+    width: 100%;
+    height: 100vh;
+    background-color: aqua;
+    position: relative;
+}
+.card{
+    width: 28vw;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    height: 32vh;
+    background-color: brown;
+    position: absolute;
+    top: 10%;
+    left: 35%;
+    box-shadow: 2px 2.8px 3px 3px rebeccapurple;
+
+}
+.box > input{
+    width: 4rem;
+    height: 2rem;
+    border-radius: 4px;
+    margin: 3px;
+    border: 1px solid transparent;
+    font-size: 27.5px
+}
+.box > input:focus{
+    outline: 2px solid black;
+
+}
+.box{
+    margin-left: 3rem;
+    margin-top: 5px;
+   
+}
+.card > h2{
+    text-align: center;
+   
+    font-family: sans-serif;
+    color: black;
+    font-size: small;
+    
+}
+.icon{
+    font-size: xx-large;
+    margin: 10px;
+}
+.button{
+    width: 100%;
+    background-color: black;
+    color: white;
+    border: 1px solid transparent;
+    height: 23%;
+    margin-top: 20px;
+    cursor: pointer;
+}
+.main>table{
+    border: 1px solid salmon;
+    width: 100%;
+    position: absolute;
+    top: 60%;
+    background-color: antiquewhite;
+}
+.table >tr> th{
+    border: 1px solid transparent;
+    font-size: large;
+    font-weight: bolder;
+    text-align: center;
+    width: 50%;
+
+}
+.table >tr > td{
+    border: 1px solid transparent;
+    text-align: center;
+    font-weight: bolder;
+    font-size: large;
+
+}
+#green{
+    color: green;
+}
+.delete{
+    color: red;
+    cursor: pointer;
+}
+@media only screen and (max-width : 480px){
+    .card{
+        width: 96vw;
+        left: 1%;
+    }
+    
+}
+@media only screen and (min-width :  700px)and ( max-width : 1280px){
+    html{
+        font-size: 14px;
+    }
+   
 }
